# swagger_api/swagger.yaml
@@ -114,7 +114,7 @@ paths:
         format: "string"
       - name: "password"
         in: "formData"
-        description: "password of user."
+        description: "password of user. It must contain atleast 1 character, 1 number and should be of minimum 8 characters and maximum of 16 characters. "
         required: true
         type: "string"
         format: "string"
@@ -157,7 +157,7 @@ paths:
         format: "string"         
       - name: "country"
         in: "formData"
-        description: "country code"
+        description: "Country code. Must be either US or CA"
         required: true
         type: "string"
         format: "string"
@@ -194,7 +194,7 @@ paths:
         format: "string"
       - name: "country"
         in: "formData"
-        description: "country code"
+        description: "Country code. Must be either US or CA"
         required: true
         type: "string"
         format: "string"
@@ -347,12 +347,12 @@ paths:
     post: 
       tags: 
         - "Onboard process"
-      summary: "Describe Type"
+      summary: "Personality Type"
       description: "To store users Describe Type <br/> 
         Note:- <br/>
         1) End point shows <b>'/user/onboard_process?2'</b> but actual end point is <b>'/user/onboard_process'</b><br/>
         swagger was throwing me error for 'same end point' so i have post fix '?2' to endpoint <br/>
-        2) All On Board Process will have same route. You have to change onboard type. For Describe Type you have to use <b>describe_type</b>"
+        2) All On Board Process will have same route. You have to change onboard type. For Describe Type you have to use <b>personality_type</b>"
         
       operationId: "onboardprocess_start_day_timePost"
       consumes: 
@@ -370,12 +370,12 @@ paths:
         - 
           name: "onboard_type"
           in: "formData"
-          description: "Onboard operation type, should be 'describe_type'"
+          description: "Onboard operation type, should be 'personality_type'"
           required: true
           type: "string"
           format: "string"  
         -
-          name: "describe_type"
+          name: "personality_type"
           in: "formData"
           description: "Describe Type of the user. It should be 'opt1' for 'I am managing diabetes well and happy to just get on with my life', 'opt2' for 'I am managing diabetes well and regularly look for new ways to improve my diabetes care', 'opt3' for 'Most of the time it's hard to manage my diabetes, I could use more help."
           required: true
@@ -479,3 +479,272 @@ paths:
             description: "JSON object which will show success or failure"
             schema:
               type: "object"
+  /user/onboard_process?5:
+      post:
+        tags:
+          - "Onboard process"
+        summary: "Starlix Medications"
+        description: "To store users Starlix medications <br/>
+          Note:- <br/>
+          1) End point shows <b>'/user/onboard_process?5'</b> but actual end point is <b>'/user/onboard_process'</b><br/>
+          swagger was throwing me error for 'same end point' so i have post fix '?5' to endpoint <br/>
+          2) All On Board Process will have same route. You have to change onboard type. For Starlix medications you have to use <b>starlix_medications</b>"
+
+        operationId: "onboardprocess_starlix_medications"
+        consumes:
+          - "application/x-www-form-urlencoded"
+        produces:
+          - "application/json"
+        parameters:
+          -
+            name: "x-access-token"
+            in: "header"
+            description: "Token of the user, place in header as x-access-token"
+            required: true
+            type: "string"
+            format: "string"
+          -
+            name: "onboard_type"
+            in: "formData"
+            description: "Onboard operation type, should be 'starlix_medications'"
+            required: true
+            type: "string"
+            format: "string"
+          -
+            name: "starlix_medications"
+            in: "formData"
+            description: "It wil be a comma seperated values for example <b>7:00 AM, 7:30 AM <b/>"
+            required: true
+            type: "string"
+            format: "string"
+        responses:
+          200:
+            description: "JSON object which will show success or failure"
+            schema:
+              type: "object"
+  /user/onboard_process?6:
+       post:
+         tags:
+           - "Onboard process"
+         summary: "Glynase Medications"
+         description: "To store users Glynase medications <br/>
+           Note:- <br/>
+           1) End point shows <b>'/user/onboard_process?6'</b> but actual end point is <b>'/user/onboard_process'</b><br/>
+           swagger was throwing me error for 'same end point' so i have post fix '?6' to endpoint <br/>
+           2) All On Board Process will have same route. You have to change onboard type. For Glynase medications you have to use <b>glynase_medications</b>"
+
+         operationId: "onboardprocess_glynase_medications"
+         consumes:
+           - "application/x-www-form-urlencoded"
+         produces:
+           - "application/json"
+         parameters:
+           -
+             name: "x-access-token"
+             in: "header"
+             description: "Token of the user, place in header as x-access-token"
+             required: true
+             type: "string"
+             format: "string"
+           -
+             name: "onboard_type"
+             in: "formData"
+             description: "Onboard operation type, should be 'glynase_medications'"
+             required: true
+             type: "string"
+             format: "string"
+           -
+             name: "glynase_medications"
+             in: "formData"
+             description: "It wil be a comma seperated values for example <b>7:00 AM, 7:30 AM <b/>"
+             required: true
+             type: "string"
+             format: "string"
+         responses:
+           200:
+             description: "JSON object which will show success or failure"
+             schema:
+               type: "object"
+  /user/change-password:
+      post:
+        tags:
+          - "Change password"
+        summary: "To change user password"
+        description: "This end point is used to change the user password"
+        operationId: "change_user_password"
+        consumes:
+          - "application/x-www-form-urlencoded"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "x-access-token"
+            in: "header"
+            description: "Token of the user, place in header as x-access-token"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "old_password"
+            in: "formData"
+            description: "Old password of the user"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "new_password"
+            in: "formData"
+            description: "New password of the user"
+            required: true
+            type: "string"
+            format: "string"
+        responses:
+          200:
+            description: "JSON object which will show success or failure"
+            schema:
+              type: "object"
+  /user:
+        get:
+          tags:
+          - "User details "
+          summary: "Get user details"
+          description: "To retrieve user details "
+          operationId: "userDetails"
+          consumes:
+          - application/x-www-form-urlencoded
+          produces:
+          - application/json
+          parameters:
+          - name: "x-access-token"
+            in: "header"
+            description: "Token of the user, place in header as x-access-token"
+            required: true
+            type: "string"
+            format: "string"
+          responses:
+            200:
+              description: "JSON object which will show success or failure"
+              schema:
+                type: "object"
+  /user/forgot-password:
+        post:
+          tags:
+          - "Forgot password"
+          summary: "Send password recovery code"
+          description: "To send password recovery code to the user's email id"
+          operationId: "sendRecoveryCode"
+          consumes:
+          - application/x-www-form-urlencoded
+          produces:
+          - application/json
+          parameters:
+          - name: "action_type"
+            in: "formData"
+            description: "Action type should be getRecoveryCode"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "email"
+            in: "formData"
+            description: "Email id of user"
+            required: true
+            type: "string"
+            format: "string"
+          responses:
+            200:
+              description: "JSON object which will show success or failure"
+              schema:
+                type: "object"
+  /user/forgot-password?:
+        post:
+          tags:
+          - "Forgot password"
+          summary: "Check password recovery code"
+          description: "To check password recovery code provided by the user"
+          operationId: "checkRecoveryCode"
+          consumes:
+          - application/x-www-form-urlencoded
+          produces:
+          - application/json
+          parameters:
+          - name: "action_type"
+            in: "formData"
+            description: "Action type should be checkRecoveryCode"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "email"
+            in: "formData"
+            description: "Email id of user"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "psw_recovery_code"
+            in: "formData"
+            description: "Password recovery code"
+            required: true
+            type: "string"
+            format: "string"
+          responses:
+            200:
+              description: "JSON object which will show success or failure"
+              schema:
+                type: "object"              
+  /user/forgot-password?1:
+        post:
+          tags:
+          - "Forgot password"
+          summary: "Set new password"
+          description: "To set new password after using forgot password feature"
+          operationId: "setNewPassword"
+          consumes:
+          - application/x-www-form-urlencoded
+          produces:
+          - application/json
+          parameters:
+          - name: "action_type"
+            in: "formData"
+            description: "Action type should be setNewPassword"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "email"
+            in: "formData"
+            description: "Email id of user"
+            required: true
+            type: "string"
+            format: "string"
+          - name: "new_password"
+            in: "formData"
+            description: "New password"
+            required: true
+            type: "string"
+            format: "string"
+          responses:
+            200:
+              description: "JSON object which will show success or failure"
+              schema:
+                type: "object"
+  /user/devices:
+            get:
+              tags:
+              - "User devices  "
+              summary: "Get user devices"
+              description: "To retrieve user devices "
+              operationId: "userDevices"
+              consumes:
+              - application/x-www-form-urlencoded
+              produces:
+              - application/json
+              parameters:
+              - name: "x-access-token"
+                in: "header"
+                description: "Token of the user, place in header as x-access-token"
+                required: true
+                type: "string"
+                format: "string"
+              responses:
+                200:
+                  description: "JSON object which will show success or failure"
+                  schema:
+                    type: "object"
+
+
+  			              
