# v0/models/users.js
@@ -63,24 +63,23 @@ module.exports = {
         var hashPass = module.exports.generateHash(req.body.password);
 
         var monthly_reveal_report=false;
-        if(req.body.hasOwnProperty('monthly_reveal_report') && typeof(req.body.monthly_reveal_report) === "boolean"){
-            monthly_reveal_report = req.body.monthly_reveal_report;
+        if(req.body.hasOwnProperty('monthly_reveal_report')){
+            monthly_reveal_report = req.body.monthly_reveal_report.trim() ==="true" ?true:false;
         }
 
         var promotional_offers_lifescan=false;
-        if(req.body.hasOwnProperty('promotional_offers_lifescan') && typeof(req.body.promotional_offers_lifescan) === "boolean"){
-            promotional_offers_lifescan = req.body.promotional_offers_lifescan;
+        if(req.body.hasOwnProperty('promotional_offers_lifescan') ){
+            promotional_offers_lifescan = req.body.promotional_offers_lifescan.trim() ==="true" ?true:false;
         }
 
         var params = {
              TableName: table_name,
              Item: {
                  "email":  req.body.email,
-                 "password": hashPass,
                  "register_type": "native",
                  "register_date": new Date().getTime(),
-                 "monthly_reveal_report": req.body.monthly_reveal_report,
-                 "promotional_offers_lifescan":req.body.promotional_offers_lifescan
+                 "monthly_reveal_report": monthly_reveal_report,
+                 "promotional_offers_lifescan":promotional_offers_lifescan
              }
         };  
         dynamodb.put(params,callback);
@@ -115,6 +114,45 @@ module.exports = {
         };
         
         dynamodb.query(params,callback);
+    },
+    checkRecoveryCode: function(email, pswRecoveryCode, callback) {
+
+      var params = {
+            TableName : table_name,
+            ExpressionAttributeNames:{
+                "#user_email": "email",
+                "#psw_recovery_code": "psw_recovery_code"
+            },
+            ExpressionAttributeValues: {
+                ":email_val":email,
+                ":psw_recovery_code": pswRecoveryCode
+            },
+            FilterExpression: "#psw_recovery_code = :psw_recovery_code",
+            KeyConditionExpression: "#user_email = :email_val",            
+        };
+        
+        dynamodb.query(params,callback);
+    },
+    removeUserAttributes: function(key, removeAttrs, callback) {
+        var UpdateExpression ='REMOVE ';
+
+        removeAttrs.forEach(function(key, index){
+          if(index !== removeAttrs.length-1) { 
+            UpdateExpression += key + ", ";
+          } else {
+            UpdateExpression += key;
+          }          
+        });
+
+        var params = {
+            TableName: table_name,
+            Key:{
+                "email": key
+            },
+            UpdateExpression: UpdateExpression
+        };
+
+        dynamodb.update(params,callback);
     }
 }
     
